# robust-pca-admm

./: LICENSE  README.md  pyproject.toml
data/: README.md
experiments/: run_mnist.py  synthetic_rpca.py
notebooks/: 01_synthetic.ipynb  real_datas.ipynb
results/mnist/: metrics.txt
src/robust_pca_admm/: admm_rpca.py  prox_operators.py
